# au-tomator-lambda

./: .gitignore  README.md  logs_output.txt  package.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: deploy-automator.yml  deploy-router.yml  deploy.yml  test-automator.yml  test-moderator.yml  test-router.yml  test.yml
automator/: README.md  config.yaml  lambda_function.py  pyproject.toml  slack.py
automator/scripts/: deploy.sh  package.sh
automator/src/: config.yaml  lambda_function.py  slack.py
automator/tests/: test_automator_lambda.py  test_format.py  test_reactions_e2e.py
docs/: logs.md
integration_tests/: test.py
moderator/: README.md  package.sh  pyproject.toml
moderator/integration/: test_moderator.py
moderator/scripts/: deploy.sh  package.sh
moderator/tests/: test_message_tracker.py  test_moderator_lambda.py
router/: README.md  deploy.sh  lambda_function.py  package.sh  pyproject.toml
router/scripts/: deploy.sh  package.sh  publish.sh
router/src/: lambda_function.py
router/tests/: test_router_lambda.py
tests/: test_automator_lambda.py  test_router_lambda.py
