[project]
name = "au-tomator-lambda"
version = "0.1.0"
description = "Slack moderation bot for DataTalks.Club running on AWS Lambda."
requires-python = ">=3.12"
dependencies = []

# Each Lambda gets its own extra so package.sh can export just its runtime deps.
# boto3 is supplied by the Lambda runtime, so it lives in dev only (for tests).
[project.optional-dependencies]
automator = [
    "pyyaml==6.0.1",
    "requests==2.28.1",
]
moderator = [
    "requests==2.28.1",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "boto3>=1.34",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
