[project]
name = "automator"
version = "0.1.0"
description = "Slack reaction + FAQ-mention handler Lambda for DataTalks.Club."
requires-python = ">=3.12"
dependencies = [
    "pyyaml==6.0.1",
    "requests==2.28.1",
]

# boto3 is supplied by the Lambda runtime, so it lives in dev only (for tests).
[dependency-groups]
dev = [
    "pytest>=8",
    "boto3>=1.34",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
