[project]
name = "moderator"
version = "0.1.0"
description = "Slack message-rate moderator Lambda for DataTalks.Club (parked)."
requires-python = ">=3.12"
dependencies = [
    "requests==2.34.2",
]

# boto3 is supplied by the Lambda runtime, so it lives in dev only (for tests).
[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "boto3>=1.43.34",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
